test/NewASTBuildFailure/new.cpp
f;
// CHECK: fatal error: failed to process the ASTs of the new library
